--- a/index.html
+++ b/index.html
@@ -7,10 +7,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <link rel="stylesheet" type="text/css" href="style.css">
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
  <div class="container">
-    <div class="item header"></div>
+     <img src="assets/Group 1.png" alt="">
+     <img src="assets/Group 2.png" alt="">
+     <img src="assets/Group 3.png" alt="">
+     <img src="assets/Group 4.png" alt="">
+     <img class="clickable" id='bearberry-link' src="assets/Group 5.png" alt="">
+     <iframe src="https://www.google.com/maps/d/embed?mid=1_GWNRFCbxevSXlYy5PIbOSCRY4C07Ih1" width="640" height="480"></iframe>
+     <img src="assets/Group 6.png" alt="">
+     <img class="clickable" id="trailer-rentals" src="assets/Group 7.png" alt="">
+     <img src="assets/Group 8.png" alt="">
+     <img class="clickable" id="bnb-1" src="assets/Group 9.png" alt="">
+     <img class="clickable" id="bnb-2" src="assets/Group 10.png" alt="">
+     <img src="assets/Group 11.png" alt="">
+     <img class="clickable" id="hotel" src="assets/Group 12.png" alt="">
+     <img src="assets/Group 13.png" alt="">
+     <img class="clickable" id="rsvp" src="assets/Group 14.png" alt="">
+     <img src="assets/Group 15.png" alt="">
+     <img class="clickable" id="potluck-registry" src="assets/Group 16.png" alt="">
+     <img src="assets/Group 17.png" alt="">
+    <!-- <div class="item header"></div>
     <div class="item blurb"></div>
     <div class="item date"></div>
     <div class="item time"></div>
@@ -35,7 +55,8 @@
         <div class="item housekeeping-main"></div>
         <div class="item housekeeping-link"></div>
     </div>
-    <div class="item footer"></div>
+    <div class="item footer"></div> -->
  </div>
+ <script src='index.js'></script>
 </body>
 </html>
